# asteroids_bevy_nohistory

./: .gitignore  Cargo.toml  README  index.html
.cargo/: config.toml
assets/: a.ast.ron  a.bullet.ron  a.input.ron  a.score.ron  a.ship.ron
assets/meshes/: ship.blend  ship.glb
src/: asteroid.rs  bodies.rs  bullet.rs  control.rs  control_2d.rs  grid.rs  input.rs  input_actions.rs  lib.rs  main.rs  schedule.rs  score.rs  ship.rs  spawner.rs  states.rs
